--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/style.css">
+        <meta name="viewport" content="width=device-width">
     </head>
     <body>
     
 
         <div class="comment">
 
-        <div class="comment__container">
+            <div class="comment__container">
 
-            <div class="comment__container__data">
+                <div class="comment__container__data">
+                    <form action="">
+                    <input type="text" name="Имя">
+                    <input type="data">
+                    <input type="">
+                    </form>
+                </div>
 
+                <div class="comment__container__comments">
+
+                </div>
             </div>
-
-            <div class="comment__container__comments">
-
-            </div>
-        </div>
 
         </div>
 
