--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width">
+    <title>Блок с комментариями</title>
 </head>
 
 <body>
